{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 17,
  "lineage": "54872cdd-7b7d-cec6-69d9-51aeb17bffc6",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:669636285272:subnet/subnet-6ee77c34",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "172.31.32.0/20",
            "default_for_az": true,
            "id": "subnet-6ee77c34",
            "map_public_ip_on_launch": true,
            "owner_id": "669636285272",
            "state": "available",
            "vpc_id": "vpc-1dbb5764"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:669636285272:subnet/subnet-9dacf2fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "id": "subnet-9dacf2fb",
            "map_public_ip_on_launch": true,
            "owner_id": "669636285272",
            "state": "available",
            "vpc_id": "vpc-1dbb5764"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az_c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:669636285272:subnet/subnet-0d351c45",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "id": "subnet-0d351c45",
            "map_public_ip_on_launch": true,
            "owner_id": "669636285272",
            "state": "available",
            "vpc_id": "vpc-1dbb5764"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:669636285272:vpc/vpc-1dbb5764",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-eb8cea92",
            "default_route_table_id": "rtb-50e5f229",
            "default_security_group_id": "sg-de6f8593",
            "dhcp_options_id": "dopt-829ac5e4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-1dbb5764",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-50e5f229",
            "owner_id": "669636285272"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "control_plane",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07042e91d04b1c30d",
            "arn": "arn:aws:ec2:eu-west-1:669636285272:instance/i-0f6df397e7dcb9d95",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "iam_instance_profile": "andy-udacity-cluster-host",
            "id": "i-0f6df397e7dcb9d95",
            "instance_state": "running",
            "instance_type": "c4.large",
            "ipv6_address_count": 0,
            "key_name": "andy-udacity-cluster-deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0e95b99a44ccb9715",
            "private_dns": "ip-172-31-45-9.eu-west-1.compute.internal",
            "private_ip": "172.31.45.9",
            "public_dns": "ec2-34-254-198-151.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.254.198.151",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0240dc93f758af25e",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "andy-udacity-cluster-common",
              "andy-udacity-cluster-control_planes"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-6ee77c34",
            "tags": {
              "Name": "andy-udacity-cluster-control_plane-1",
              "kubernetes.io/cluster/andy-udacity-cluster": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-013c1b73315ff5315",
              "sg-0c4f9ae23cd4deb27"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.control_plane"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "control_plane",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:669636285272:loadbalancer/net/andy-udacity-cluster-api-lb/3f406c83a9802b21",
            "arn_suffix": "net/andy-udacity-cluster-api-lb/3f406c83a9802b21",
            "dns_name": "andy-udacity-cluster-api-lb-3f406c83a9802b21.elb.eu-west-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:669636285272:loadbalancer/net/andy-udacity-cluster-api-lb/3f406c83a9802b21",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "andy-udacity-cluster-api-lb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0d351c45"
              },
              {
                "subnet_id": "subnet-6ee77c34"
              },
              {
                "subnet_id": "subnet-9dacf2fb"
              }
            ],
            "subnets": [
              "subnet-0d351c45",
              "subnet-6ee77c34",
              "subnet-9dacf2fb"
            ],
            "tags": {
              "Cluster": "andy-udacity-cluster",
              "kubernetes.io/cluster/andy-udacity-cluster": "shared"
            },
            "vpc_id": "vpc-1dbb5764",
            "zone_id": "Z2IFOLAFXWLO4F"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "control_plane_api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:669636285272:listener/net/andy-udacity-cluster-api-lb/3f406c83a9802b21/149d09c3dae23942",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:669636285272:targetgroup/andy-udacity-cluster-api/6a23f89e4e3583b3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:669636285272:listener/net/andy-udacity-cluster-api-lb/3f406c83a9802b21/149d09c3dae23942",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:669636285272:loadbalancer/net/andy-udacity-cluster-api-lb/3f406c83a9802b21",
            "port": 6443,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_lb.control_plane",
            "aws_lb_target_group.control_plane_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "control_plane_api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:669636285272:targetgroup/andy-udacity-cluster-api/6a23f89e4e3583b3",
            "arn_suffix": "targetgroup/andy-udacity-cluster-api/6a23f89e4e3583b3",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:669636285272:targetgroup/andy-udacity-cluster-api/6a23f89e4e3583b3",
            "lambda_multi_value_headers_enabled": false,
            "name": "andy-udacity-cluster-api",
            "port": 6443,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "target_type": "instance",
            "vpc_id": "vpc-1dbb5764"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "control_plane_api",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:669636285272:targetgroup/andy-udacity-cluster-api/6a23f89e4e3583b3-20200210115339034900000001",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:669636285272:targetgroup/andy-udacity-cluster-api/6a23f89e4e3583b3",
            "target_id": "i-0f6df397e7dcb9d95"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_instance.control_plane",
            "aws_key_pair.deployer",
            "aws_lb_target_group.control_plane_api",
            "aws_security_group.common",
            "aws_security_group.control_plane"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "common",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:669636285272:security-group/sg-013c1b73315ff5315",
            "description": "cluster common rules",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-013c1b73315ff5315",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "andy-udacity-cluster-common",
            "name_prefix": null,
            "owner_id": "669636285272",
            "revoke_rules_on_delete": false,
            "tags": {
              "kubernetes.io/cluster/andy-udacity-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-1dbb5764"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "control_plane",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:669636285272:security-group/sg-0c4f9ae23cd4deb27",
            "description": "cluster control_planes",
            "egress": [],
            "id": "sg-0c4f9ae23cd4deb27",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              }
            ],
            "name": "andy-udacity-cluster-control_planes",
            "name_prefix": null,
            "owner_id": "669636285272",
            "revoke_rules_on_delete": false,
            "tags": {
              "kubernetes.io/cluster/andy-udacity-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-1dbb5764"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    }
  ]
}